Fixed some wrapping and other issues in dashboard and cookie banner

--- a/src/style/dashboard.scss
+++ b/src/style/dashboard.scss
@@ -1,6 +1,8 @@
 .container {
     width: 35vw;
-    height: 90vh;
+    height: 100%;
+
+    min-height: 90vh;
 
     background-color: white;
 
